prevent class lists from overflowing, fix a bug in CSS, closes #447

--- a/src/typography.css
+++ b/src/typography.css
@@ -130,7 +130,7 @@ textarea {
     line-height: 30px;
   }
 
-  .txt-ml-ml {
+  .txt-m-ml {
     font-size: 15px;
     line-height: 24px;
   }
@@ -167,7 +167,7 @@ textarea {
     line-height: 30px;
   }
 
-  .txt-mlxl {
+  .txt-m-mxl {
     font-size: 15px;
     line-height: 24px;
   }
